--- a/sigtl/templates/main.html
+++ b/sigtl/templates/main.html
@@ -13,8 +13,9 @@
 
             {% csrf_token %}
             <input type="file" name="file" class="mt-5">
-            <button type="submit"
+            <button type="submit" class="btn btn-success">submit</button>
         </form>
+        
 
     </body>
 </html>
