🎨 Se cambio el estilo para cargar el archivo css, en C.Movimientos

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -3,6 +3,7 @@
     border-color: rgb(56, 102, 255);
     border-style:dashed;
     padding:30px;
+    border-radius: 10px;
   }
   .icon-excel{
     position:relative;
